--- a/src/app.css
+++ b/src/app.css
@@ -1,19 +1,6 @@
 @import 'tailwindcss';
-@tailwind utilities;
 
-/* :root {
-  --bgColor: #181818;
-  --: #282828;
-} */
-
-/* .text-custom-green {
-  color: var(--custom-green);
-} */
-
-.bg-bgColor {
-  background-color: #181818;
-}
-
-.bg-tileColor {
-  background-color: #282828;
+@theme {
+  --color-midnight: #181818;
+  --color-lightGrey : #282828;
 }
