--- a/src/app.css
+++ b/src/app.css
@@ -29,3 +29,24 @@
 .input-gradient:focus-within::before {
   opacity: 1;
 }
+
+@keyframes bounce {
+  0%, 80%, 100% {
+      transform: translateY(0);
+  }
+  40% {
+      transform: translateY(-20px);
+  }
+}
+.dot {
+  animation: bounce 1s infinite;
+}
+.dot:nth-child(1) {
+  animation-delay: 0s;
+}
+.dot:nth-child(2) {
+  animation-delay: 0.2s;
+}
+.dot:nth-child(3) {
+  animation-delay: 0.4s;
+}
